# aws-ssm-tool

./: .ackrc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pynchon.json5  Dockerfile  LICENSE  Makefile  README.md  README.md.j2  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-build-push.yml  docker-build.yml  python-publish.yml  python-test.yml
docs/api/: README.md
docs/cli/: README.md  script-ssm.md  ssm.md
src/ssm/: __init__.py  __main__.py
src/ssm/abcs/: __init__.py  loggable.py
src/ssm/api/: __init__.py  environment.py  manager.py
src/ssm/cli/: __init__.py  args.py  options.py  wrapper.py
src/ssm/util/: __init__.py
tests/integration/: test.sh  test_all.py
tests/smoke/: test.sh
tests/units/: test_all.py
