# setup.cfg for ssm
# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = ssm
description = AWS SSM tool
author = Robot-Wranglers
#author_email = info@Robot-Wranglers
platforms = any
license = MIT
license_files = LICENSE.txt
long_description = See the project README
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Robot-Wranglers/ssm-tool/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/Robot-Wranglers/ssm-tool/
    Source = https://github.com/Robot-Wranglers/ssm-tool/
    Download = https://github.com/Robot-Wranglers/ssm-tool/#files

# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >3.7

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires = 
  click
  pyyaml
  termcolor
  coloredlogs
  boto==2.49.0
  boto3==1.17.97
  botocore==1.20.97

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# installed via `pip install .[dev]`
dev =
    IPython

# NB: This section is used by CI, via `make test`, which invokes tox.  See also `tox.ini`
# installed via `pip install .[testing]`
testing =
    IPython
    tox
    pytest
    pytest-cov
    mock
    flake8==5.0.4

# NB: This section is used by CI, via `make static-analysis`.  See also `Makefile`
# Installed via `pip install .[lint]`.
lint =
    tox

# NB: This section is used by CI, via `make publish`.  See also `Makefile`
# installed via `pip install .[publish]`
publish =
    twine

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    ssm = ssm.bin.ssm:entry


[tool:pytest]
addopts =
    --cov ssm --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests